# ExamSchedulingSystem

./: CMakeLists.txt  README.md  classroom.h  classrooms.csv  exam.csv  exam.h  main  main.cpp  scheduler.cpp  scheduler.h  seating.cpp  seating.h  student.h  students.csv  utils.cpp  utils.h
